Fixed issues with jap text spacing

--- a/level0-B/lesson-15/main.scss
+++ b/level0-B/lesson-15/main.scss
@@ -5,7 +5,7 @@ $primary-blue: #1287cd;
 $rank-green: #009c9a;
 $primary-dark: #083051;
 $primary-light: #cce0ec;
-$jap-letter-spacing: -1px;
+$jap-letter-spacing: 0px;
 
 $subtext-color: #7f8288;
 
@@ -174,9 +174,8 @@ body {
       margin-right: 1em;
     }
     .sub-title {
-      font-size: clamp(9px, 2vw, 13px);
+      font-size: clamp(9px, 2vw, 12px);
       color: $subtext-color;
-      letter-spacing: -0.9px;
     }
   }
 
